--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,10 @@ jobs:
         node-version: '10.x'
 
     # Runs a set of commands using the runners shell
-    - name: Run a multi-line script
+    - name: jest
       run: |
         yarn --frozen-lockfile
         yarn test
+    - name: onFailure
+        if: failure()
+        run: echo "hello world"
