--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,5 +33,5 @@ jobs:
         yarn --frozen-lockfile
         yarn test
     - name: onFailure
-      if: job.steps.jest.status == failure()
+      if: failure()
       run: echo "hello world"
