--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,18 @@ jobs:
         yarn --frozen-lockfile
         yarn test
       # continue-on-error: true
+    - name: manifest Version
+        uses: deef0000dragon1/json-edit-action/@v1
+        env:
+          KEY: version
+          VALUE: v0.1.1
+          FILE: ${{ env.workspace }}/src/testResults.json
+    - name: manifest Version1223
+        uses: deef0000dragon1/json-edit-action/@v1
+        env:
+          KEY: version1223
+          VALUE: v0.1.1
+          FILE: ${{ env.workspace }}/src/testResults.json
     - name: onFailure
       if: failure()
       id: package
