--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,8 @@ jobs:
     - run: echo ::set-env name=workspace::$GITHUB_WORKSPACE
 
     # Runs a set of commands using the runners shell
+    - name: print github sha
+      run: echo ${{ GITHUB_SHA }}
     - name: jest
       id: jest
       run: |
@@ -48,7 +50,7 @@ jobs:
       uses: deef0000dragon1/json-edit-action/@v1
       env:
         KEY: version1223
-        VALUE: v0.1.1
+        VALUE: $ {{ GITHUB_SHA }}
         FILE: ${{ env.workspace }}/src/testResults.json
     - name: onFailure
       if: failure()
@@ -58,4 +60,4 @@ jobs:
         path: ${{ env.workspace }}/src/testResults.json
     - name: Echo package.json
       if: failure()
-      run: echo ${{ steps.package.outputs.content }}
+      run: echo "${{ steps.package.outputs.content }}"
