--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,10 +28,6 @@ jobs:
         
     - run: echo ::set-env name=workspace::$GITHUB_WORKSPACE
 
-    - name: Set outputs
-      id: vars
-      run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
-
     # Runs a set of commands using the runners shell
     - name: jest
       id: jest
@@ -52,7 +48,7 @@ jobs:
       uses: deef0000dragon1/json-edit-action/@v1
       env:
         KEY: version1223
-        VALUE: ${{ env.GITHUB_SHA }}
+        VALUE: ${{ env.GITHUB_RUN_ID }}
         FILE: ${{ env.workspace }}/src/testResults.json
     - name: onFailure
       if: failure()
